objects/Lesson_Learned__c.object
<CustomObject>
    <fields>
        <fullName>Change_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grounding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grounding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Labor_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Labor Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lesson_Learned__c</fullName>
        <label>Lesson Learned</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lessons Learned</relationshipLabel>
        <relationshipName>Lessons_Learned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project related to the Lesson Learned</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Lessons Learned</relationshipLabel>
        <relationshipName>Lessons_Learned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Lessons Learned</relationshipLabel>
        <relationshipName>Lessons_Learned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_or_Interconnection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate or Interconnection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roofing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roofing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subcontractor_or_Partner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subcontractor or Partner 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lessons Learned (Subcontractor or Partner 2)</relationshipLabel>
        <relationshipName>Lessons_Learned1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcontractor_or_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subcontractor or Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lessons Learned</relationshipLabel>
        <relationshipName>Lessons_Learned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcontractors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subcontractors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wire_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wire Management</label>
        <type>Checkbox</type>
    </fields>
    <label>Lesson Learned</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LL-{000000}</displayFormat>
        <label>Lesson Learned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lessons Learned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>